...
    // Health
    case healthMedical   = "Health & Medical"
    case pharmacy        = "Pharmacy"
    case gymFitness      = "Gym & Fitness"
    case yogaWellness    = "Yoga & Wellness"
    // Shopping
    case shopping        = "Shopping"
    case clothing        = "Clothing"
    case electronics     = "Electronics"
    // Entertainment
    case entertainment   = "Entertainment"
    case music           = "Music"
    case gaming          = "Gaming"
    case booksReading    = "Books & Reading"
    // Travel
    case travel          = "Travel"
    case hotels          = "Hotels"
...
